commit f8ff06dcbcb66b158b938cfee42b56470635e7b5 (HEAD -> sr_tmp, tag: 3.0.4) Author: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com> Date:   Mon Jul 17 21:55:51 2023 +0800
    [BugFix] Fix compile bugs in clang compiler (backport #26887) (#27386)

    This is an automatic backport of pull request #26887 done by
    [Mergify](https://mergify.com).